src/test/deca/context/invalid/protected-classNotSubTypeOfField.deca
class fieldClass{
    Class z;
    void method() {
        z.f;
    }
}

class Class extends fieldClass{
    protected int f;
}
